[package]
name = "drive-client"
version = "0.1.5"
authors = ["Ian <ianguimaraes31@gmail.com>", "Lorenzo <maturanolorenzo@gmail.com>"]
edition = "2018"
license="MIT"
description="Exchange files locally using mDNS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-message-parser="0.4.2"
bytes="1.0.1"
pnet = "0.27.2"
net2 = "0.2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sha-1 = "0.9.3"
hex = "0.3.1"
